Check for daily weight loss

--- a/app/src/main/res/layout/register_weight_activity.xml
+++ b/app/src/main/res/layout/register_weight_activity.xml
@@ -2,8 +2,12 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hideKeyBoard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:onClick="hideKeyBoard"
     tools:context=".activities.RegisterWeightActivity">
 
     <EditText
@@ -17,10 +21,10 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
+        android:gravity="center"
         android:hint="Mængde i gram"
         android:inputType="numberSigned|numberDecimal"
         android:maxLength="4"
-        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
