--- a/app/src/main/res/layout/diet_creation_activity.xml
+++ b/app/src/main/res/layout/diet_creation_activity.xml
@@ -19,6 +19,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Navn på diæt"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,6 +32,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textCursorDrawable="@android:color/background_dark"
+        android:textSize="14sp"
+        app:backgroundTint="@android:color/background_dark"
         app:layout_constraintStart_toStartOf="@+id/tvDietName"
         app:layout_constraintTop_toBottomOf="@+id/tvDietName" />
 
@@ -37,8 +42,9 @@
         android:id="@+id/tvCurrentWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="Nuværende vægt"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/etDietName"
         app:layout_constraintTop_toBottomOf="@+id/etDietName" />
 
@@ -49,6 +55,9 @@
         android:ems="10"
         android:inputType="numberSigned|numberDecimal"
         android:maxLength="5"
+        android:textCursorDrawable="@android:color/background_dark"
+        android:textSize="14sp"
+        app:backgroundTint="@android:color/background_dark"
         app:layout_constraintStart_toStartOf="@+id/tvCurrentWeight"
         app:layout_constraintTop_toBottomOf="@+id/tvCurrentWeight" />
 
@@ -56,8 +65,9 @@
         android:id="@+id/tvDesiredWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="Ønskede vægt"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/etCurrentWeight"
         app:layout_constraintTop_toBottomOf="@+id/etCurrentWeight" />
 
@@ -68,6 +78,9 @@
         android:ems="10"
         android:inputType="numberSigned|numberDecimal"
         android:maxLength="5"
+        android:textCursorDrawable="@android:color/background_dark"
+        android:textSize="14sp"
+        app:backgroundTint="@android:color/background_dark"
         app:layout_constraintStart_toStartOf="@+id/tvDesiredWeight"
         app:layout_constraintTop_toBottomOf="@+id/tvDesiredWeight" />
 
@@ -75,8 +88,9 @@
         android:id="@+id/tvDays"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="Antal dage"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/etDesiredWeight"
         app:layout_constraintTop_toBottomOf="@+id/etDesiredWeight" />
 
@@ -85,27 +99,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:maxLength="3"
         android:inputType="number"
+        android:maxLength="3"
+        android:textCursorDrawable="@android:color/background_dark"
+        android:textSize="14sp"
+        app:backgroundTint="@android:color/background_dark"
         app:layout_constraintStart_toStartOf="@+id/tvDays"
         app:layout_constraintTop_toBottomOf="@+id/tvDays" />
 
     <Button
         android:id="@+id/btnCreate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/ripple"
         android:text="Opret Diæt"
-        app:layout_constraintEnd_toEndOf="@+id/etDays"
-        app:layout_constraintStart_toStartOf="@+id/etDays"
-        app:layout_constraintTop_toBottomOf="@+id/etDays" />
+        android:textAllCaps="false"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etHeight"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/tvHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="Højde"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/etDays"
         app:layout_constraintTop_toBottomOf="@+id/etDays" />
 
@@ -116,6 +143,9 @@
         android:ems="10"
         android:inputType="numberSigned|numberDecimal"
         android:maxLength="5"
+        android:textCursorDrawable="@android:color/background_dark"
+        android:textSize="14sp"
+        app:backgroundTint="@android:color/background_dark"
         app:layout_constraintStart_toStartOf="@+id/tvHeight"
         app:layout_constraintTop_toBottomOf="@+id/tvHeight" />
 
