More ui modifications

--- a/app/src/main/res/layout/custom_diet_list_cell.xml
+++ b/app/src/main/res/layout/custom_diet_list_cell.xml
@@ -12,12 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:text="TextView"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Diet Name" />
@@ -26,12 +24,12 @@
         android:id="@+id/tvStartWeight"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:gravity="left"
         android:text="TextView"
         android:textColor="@android:color/black"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@+id/tvDesiredWeight"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:text="Start Weight" />
 
@@ -39,11 +37,13 @@
         android:id="@+id/tvDesiredWeight"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:gravity="center"
         android:text="TextView"
         android:textColor="@android:color/black"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/tvStartWeight"
-        app:layout_constraintTop_toBottomOf="@+id/tvName"
+        android:textSize="15sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tvStartWeight"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text="Desired weight" />
 </android.support.constraint.ConstraintLayout>
