--- a/app/src/main/res/layout/day_activity.xml
+++ b/app/src/main/res/layout/day_activity.xml
@@ -205,18 +205,22 @@
 
     <Button
         android:id="@+id/btnPieChart"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="35dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/ripple"
         android:text="@string/anbefalet_madfordeling"
         android:textAllCaps="false"
         android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="@+id/cbLikeDay"
+        app:layout_constraintBottom_toBottomOf="@+id/piechart"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/piechart"
-        app:layout_constraintTop_toTopOf="@+id/piechart" />
+        app:layout_constraintTop_toTopOf="@+id/piechart"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/tvvv"
@@ -254,6 +258,6 @@
         app:layout_constraintEnd_toEndOf="@+id/cbLikeDay"
         app:layout_constraintStart_toStartOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.13" />
+        app:layout_constraintVertical_bias="0.100000024" />
 
 </android.support.constraint.ConstraintLayout>
