Selection menu added and code refactor

--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -187,14 +187,12 @@
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/linechart"
-        android:layout_width="340dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="0dp"
+        android:layout_height="220dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/TvDietInfo"
-        app:layout_constraintEnd_toEndOf="@+id/tvAllowedFood"
+        app:layout_constraintEnd_toEndOf="@+id/tvBMI"
         app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintVertical_bias="1.0" />
@@ -203,43 +201,37 @@
         android:id="@+id/TvDietInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Gå til"
+        android:text="Gå til:"
         android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linechart"
+        app:layout_constraintStart_toStartOf="@+id/linechart"
         app:layout_constraintTop_toTopOf="@+id/guideline3"
         app:layout_constraintVertical_bias="0.55" />
 
     <Button
         android:id="@+id/btnGoToDiet"
         android:layout_width="0dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_height="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/ripple"
         android:text="@string/diæt_info"
         android:textAllCaps="false"
-        android:textSize="10sp"
+        android:textSize="11sp"
         android:typeface="normal"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/TvDietInfo" />
 
     <Button
         android:id="@+id/btnGoToDay"
         android:layout_width="0dp"
-        android:layout_height="35dp"
+        android:layout_height="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -248,8 +240,8 @@
         android:background="@drawable/ripple"
         android:text="@string/dag_info"
         android:textAllCaps="false"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="@+id/tvBMI"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/TvDietInfo" />
 
@@ -259,7 +251,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Indtast vejninger"
+        android:text="Indtast vejninger:"
         android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -271,9 +263,7 @@
     <Button
         android:id="@+id/btnBodyWeighIn"
         android:layout_width="0dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_height="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
@@ -281,29 +271,27 @@
         android:background="@drawable/ripple"
         android:text="Krop"
         android:textAllCaps="false"
-        android:textSize="10sp"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/btnGoToDiet"
         app:layout_constraintTop_toBottomOf="@+id/tvWeighInInfo"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnFood"
         android:layout_width="0dp"
-        android:layout_height="35dp"
+        android:layout_height="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/ripple"
         android:text="Mad"
         android:textAllCaps="false"
-        android:textSize="10sp"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btnGoToDay"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/tvWeighInInfo"
         app:layout_constraintVertical_bias="0.0" />
