--- a/app/src/main/res/layout/diet_creation_activity.xml
+++ b/app/src/main/res/layout/diet_creation_activity.xml
@@ -9,6 +9,10 @@
     android:onClick="hideKeyBoard"
     tools:context=".activities.DietCreationActivity">
 
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
     <TextView
         android:id="@+id/tvDietName"
         android:layout_width="wrap_content"
@@ -40,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <TextView
         android:id="@+id/tvCurrentWeight"
