--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -199,7 +199,7 @@
         app:layout_constraintEnd_toEndOf="@+id/tvBMI"
         app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.95" />
 
     <TextView
         android:id="@+id/TvDietInfo"
@@ -214,7 +214,7 @@
         app:layout_constraintEnd_toEndOf="@+id/linechart"
         app:layout_constraintStart_toStartOf="@+id/linechart"
         app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:layout_constraintVertical_bias="0.55" />
+        app:layout_constraintVertical_bias="0.61" />
 
     <Button
         android:id="@+id/btnGoToDiet"
@@ -229,7 +229,7 @@
         android:textSize="11sp"
         android:typeface="normal"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintStart_toStartOf="@+id/linechart"
         app:layout_constraintTop_toBottomOf="@+id/TvDietInfo" />
 
     <Button
@@ -239,13 +239,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/ripple"
         android:text="@string/dag_info"
         android:textAllCaps="false"
         android:textSize="11sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvBMI"
+        app:layout_constraintEnd_toEndOf="@+id/linechart"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/TvDietInfo" />
 
