--- a/app/src/main/res/layout/diet_activity.xml
+++ b/app/src/main/res/layout/diet_activity.xml
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Dagligt Vægttab:"
+        android:text="Dagligt vægttab:"
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
