--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -172,11 +172,15 @@
         android:id="@+id/linechart"
         android:layout_width="0dp"
         android:layout_height="220dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/TvDietInfo"
-        app:layout_constraintEnd_toEndOf="@+id/tvBMI"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintVertical_bias="0.95" />
 
@@ -208,7 +212,7 @@
         android:textSize="11sp"
         android:typeface="normal"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/linechart"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/TvDietInfo" />
 
     <Button
@@ -222,7 +226,7 @@
         android:text="@string/dag_info"
         android:textAllCaps="false"
         android:textSize="11sp"
-        app:layout_constraintEnd_toEndOf="@+id/linechart"
+        app:layout_constraintEnd_toEndOf="@+id/tvBMI"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/TvDietInfo" />
 
