--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#C1C1C1</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#3949AB</color>
 </resources>
