popupwindow with welcome message added and coded

--- a/app/src/main/res/menu/select_menu.xml
+++ b/app/src/main/res/menu/select_menu.xml
@@ -9,6 +9,6 @@
         android:id="@+id/mnuSwitchDiet"
         android:title="Skift diæt" />
     <item
-        android:id="@+id/mnuAbout"
+        android:id="@+id/mnuInformation"
         android:title="Information" />
 </menu>
