Full guide with images and text implemented.

--- a/app/src/main/res/menu/select_menu.xml
+++ b/app/src/main/res/menu/select_menu.xml
@@ -9,6 +9,9 @@
         android:id="@+id/mnuSwitchDiet"
         android:title="Skift diæt" />
     <item
+        android:id="@+id/mnuGuide"
+        android:title="Vejledning" />
+    <item
         android:id="@+id/mnuInformation"
         android:title="Information" />
 </menu>
