--- a/app/src/main/res/layout/diet_creation_activity.xml
+++ b/app/src/main/res/layout/diet_creation_activity.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
+    android:focusableInTouchMode="true"
     android:focusable="true"
     android:onClick="hideKeyBoard"
     tools:context=".activities.DietCreationActivity">
