--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -87,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Dagens målvægt:"
+        android:text="Målvægt:"
         android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/textView"
