--- a/app/src/main/res/layout/text_popup_window.xml
+++ b/app/src/main/res/layout/text_popup_window.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_custom_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
-    android:padding="2dp"
-    >
-
+    android:padding="2dp">
 
     <TextView
         android:id="@+id/textView15"
@@ -33,7 +30,7 @@
         android:layout_marginBottom="8dp"
         android:padding="25sp"
         android:scrollbars="vertical"
-        android:text="@string/introduction"
+        android:text="@string/welcome"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -42,7 +39,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btnSkip"
         android:layout_width="0dp"
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
@@ -61,7 +58,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnGuide"
         android:layout_width="0dp"
         android:layout_height="32dp"
         android:layout_marginStart="8dp"
