--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -281,4 +281,16 @@
         app:layout_constraintTop_toBottomOf="@+id/tvWeighInInfo"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/btnPause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Pause Diæt"
+        app:layout_constraintBottom_toTopOf="@+id/linechart"
+        app:layout_constraintEnd_toEndOf="@+id/linechart"
+        app:layout_constraintStart_toStartOf="@+id/linechart"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
